# HallwayNavigator

./: README.md
aida/: CMakeLists.txt  data  package.xml
aida/launch/: 3d_scan.launch  all.launch  config.rviz
aida/msg/: LineMsg.msg  People.msg  Velocity.msg  Walls.msg
aida/src/: bestFit.cpp  constants.h  definitions.h  detector.cpp  end_of_hallway.cpp  hallway.cpp  la.cpp  lis.cpp  reset.cpp  switch.cpp  turn.cpp
aida/srv/: GetDirection.srv  Update.srv
